test/Fail/Imports/Issue1913-M.agda
module Imports.Issue1913-M where

data D : Set where
  d : D
